--- a/app/src/main/res/layout/pump_card.xml
+++ b/app/src/main/res/layout/pump_card.xml
@@ -15,8 +15,8 @@
 
         <ImageView
             android:id="@+id/imageView2"
-            android:layout_width="127dp"
-            android:layout_height="118dp"
+            android:layout_width="160dp"
+            android:layout_height="160dp"
             android:scaleType="centerCrop"
             android:layout_alignParentEnd="true"
             android:layout_gravity="left"
@@ -35,6 +35,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/station_name"
+            android:textSize="25sp"
             tools:text="Petrol Price" />
 
         <TextView
@@ -42,21 +43,24 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/petrol_price"
-            tools:text="Petrol Price" />
+            android:textSize="25sp"
+            tools:text="Diesel Price" />
 
         <TextView
             android:id="@+id/eircode"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/diesel_price"
-            tools:text="Petrol Price" />
+            android:textSize="20sp"
+            tools:text="Eircode" />
 
         <TextView
             android:id="@+id/address"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/eircode"
-            tools:text="Petrol Price" />
+            android:textSize="20sp"
+            tools:text="address" />
 
     </RelativeLayout>
 </androidx.cardview.widget.CardView>
