--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -8,4 +8,11 @@
         android:title="@string/menu_addPump"
         app:showAsAction="always" />
 
+    <item
+        android:id="@+id/item_cancel"
+        android:title="@string/activity_cancelAddPump"
+        app:showAsAction="always"/>
+
 </menu>
+
+
