Need to fix log out and attempt delete

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,11 +5,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/login_button"
         android:layout_width="147dp"
         android:layout_height="55dp"
-        android:text="Button"
+        android:background="@drawable/button_background"
+        android:textColor="@color/white"
+        android:text="Start"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.53"
@@ -19,28 +21,40 @@
 
     <EditText
         android:id="@+id/TextEmailAddress"
-        android:layout_width="212dp"
-        android:layout_height="42dp"
-        android:layout_marginTop="448dp"
+        android:layout_width="224dp"
+        android:layout_height="63dp"
+        android:layout_marginTop="348dp"
+        android:background="@drawable/borders"
+        android:elevation="8dp"
         android:ems="10"
+        android:hint="Email Address"
         android:inputType="textEmailAddress"
+        android:paddingLeft="10dp"
+        android:radius="16dp"
+        android:shadowColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.543"
+        app:layout_constraintHorizontal_bias="0.545"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/TextPassword"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="226dp"
+        android:layout_height="60dp"
+        android:background="@drawable/borders"
+        android:elevation="8dp"
         android:ems="10"
+        android:hint="Password"
         android:inputType="textPassword"
+        android:paddingLeft="10dp"
+        android:radius="16dp"
+        android:shadowColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.537"
+        app:layout_constraintHorizontal_bias="0.551"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/TextEmailAddress"
-        app:layout_constraintVertical_bias="0.198" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.706" />
 
     <ImageView
         android:id="@+id/imageView"
@@ -51,5 +65,5 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.165"
-        app:srcCompat="@android:drawable/ic_menu_compass" />
+        app:srcCompat="@android:drawable/cover.png" />
 </androidx.constraintlayout.widget.ConstraintLayout>
