--- a/app/src/main/res/drawable/button_background.xml
+++ b/app/src/main/res/drawable/button_background.xml
@@ -1,12 +1,14 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="#ffffff"/>
+    <solid
+        android:color="#9C0464"/>
+
 
     <corners
-        android:radius="20dp"/>
+        android:radius="10dp"/>
 
     <stroke
-        android:width="2dp"
+        android:width="3dp"
         android:color="#ffffff"/>
 </shape>
