--- a/app/src/main/res/layout/pump_activity_main.xml
+++ b/app/src/main/res/layout/pump_activity_main.xml
@@ -18,11 +18,21 @@
         <com.google.android.material.appbar.AppBarLayout
             android:id="@+id/appBarLayout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/colorAccent"
+            android:layout_height="59dp"
+            android:background="#FFFFFF"
             android:fitsSystemWindows="true"
             app:elevation="0dip"
             app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+
+            <Button
+                android:id="@+id/activity_cancelAddPump"
+                android:background="@drawable/button_background"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:layout_margin="10dp"
+                android:text="Cancel"
+                android:textSize="16sp" />
 
             <androidx.appcompat.widget.Toolbar
                 android:id="@+id/toolbarAdd"
@@ -30,14 +40,6 @@
                 android:layout_height="15dp"
                 app:titleTextColor="@color/colorPrimary" />
 
-            <Button
-                android:id="@+id/activity_cancelAddPump"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="right"
-                android:layout_margin="10dp"
-                android:text="Cancel"
-                android:textSize="16sp" />
         </com.google.android.material.appbar.AppBarLayout>
 
         <ScrollView
@@ -54,6 +56,7 @@
 
                 <Spinner
                     android:id="@+id/coursesspinner"
+                    android:background="#FFFFFF"
                     android:layout_height="50dp"
                     android:layout_width="200dp"
                     android:layout_marginEnd="10dp"
@@ -70,6 +73,7 @@
                     android:layout_margin="8dp"
                     android:autofillHints="hint"
                     android:hint="@string/hint_station_name"
+                    android:background="#FFFFFF"
                     android:inputType="text"
                     android:maxLength="25"
                     android:maxLines="1"
@@ -87,6 +91,7 @@
                     android:layout_margin="8dp"
                     android:autofillHints="hint"
                     android:hint="@string/hint_petrol_price"
+                    android:background="#FFFFFF"
                     android:inputType="number"
                     android:maxLength="25"
                     android:maxLines="1"
@@ -101,6 +106,7 @@
                     android:layout_margin="8dp"
                     android:autofillHints="hint"
                     android:hint="@string/hint_diesel_price"
+                    android:background="#FFFFFF"
                     android:inputType="number"
                     android:maxLength="25"
                     android:maxLines="1"
@@ -115,6 +121,7 @@
                     android:layout_margin="8dp"
                     android:autofillHints="hint"
                     android:hint="@string/hint_eircode"
+                    android:background="#FFFFFF"
                     android:inputType="text"
                     android:maxLength="25"
                     android:maxLines="1"
@@ -128,7 +135,8 @@
                     android:layout_height="45dp"
                     android:layout_margin="8dp"
                     android:autofillHints="hint"
-                    android:hint="@string/hint_address"
+                    android:text="@string/hint_address"
+                    android:background="#FFFFFF"
                     android:inputType="text"
                     android:maxLength="25"
                     android:maxLines="1"
@@ -136,17 +144,17 @@
                     android:textColor="@color/colorPrimaryDark"
                     android:textSize="14sp" />
 
-                <Button
+                <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/btnAdd"
+                    android:background="@drawable/button_background"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="16dp"
-                    android:background="@color/colorAccent"
                     android:paddingTop="8dp"
                     android:paddingBottom="8dp"
                     android:stateListAnimator="@null"
                     android:text="@string/btn_addStation"
-                    android:textColor="@color/colorPrimary"
+                    android:textColor="@color/white"
                     android:textSize="16sp" />
             </LinearLayout>
         </ScrollView>
