--- a/app/src/main/res/layout/pump_card.xml
+++ b/app/src/main/res/layout/pump_card.xml
@@ -3,9 +3,11 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="@color/colorAccent"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="8dp"
+    android:radius="10dp"
     android:elevation="24dp">
 
     <RelativeLayout
