--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -23,7 +23,7 @@
         android:id="@+id/TextEmailAddress"
         android:layout_width="224dp"
         android:layout_height="63dp"
-        android:layout_marginTop="348dp"
+        android:layout_marginTop="384dp"
         android:background="@drawable/borders"
         android:elevation="8dp"
         android:ems="10"
@@ -54,16 +54,18 @@
         app:layout_constraintHorizontal_bias="0.551"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.706" />
+        app:layout_constraintVertical_bias="0.74" />
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="163dp"
-        android:layout_height="194dp"
+        android:layout_width="600dp"
+        android:layout_height="336dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.165"
-        app:srcCompat="@android:drawable/cover.png" />
+        app:layout_constraintVertical_bias="0.068"
+        app:srcCompat="@drawable/cover1" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
