--- a/app/src/main/res/layout/pump_activity_list.xml
+++ b/app/src/main/res/layout/pump_activity_list.xml
@@ -63,9 +63,11 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom" />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/logout_button"
+        android:background="@drawable/button_background"
         android:layout_width="124dp"
+        android:textColor="@color/white"
         android:layout_height="wrap_content"
         android:text="@string/logout_text"
         app:layout_anchor="@+id/bottomAppBar"
