--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -4,9 +4,17 @@
 
     <item
         android:id="@+id/item_add"
+        android:background="@drawable/button_background"
         android:icon="@android:drawable/ic_menu_add"
         android:title="@string/menu_addPump"
         app:showAsAction="always" />
+
+    <item
+        android:id="@+id/action_search"
+        android:icon="@android:drawable/ic_menu_search"
+        android:title="@string/search"
+        app:showAsAction="always"
+        app:actionViewClass="android.widget.SearchView" />
 
 
 </menu>
