--- a/app/src/main/res/layout/pump_activity_list.xml
+++ b/app/src/main/res/layout/pump_activity_list.xml
@@ -49,10 +49,11 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="351dp"
         android:layout_marginTop="250dp"
         android:layout_marginBottom="70dp"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:background="@color/colorAccent"
         android:scrollbars="vertical"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
