--- a/app/src/main/res/layout/pump_activity_list.xml
+++ b/app/src/main/res/layout/pump_activity_list.xml
@@ -74,4 +74,12 @@
         app:layout_anchor="@+id/bottomAppBar"
         app:layout_anchorGravity="center" />
 
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+    <!-- this the navigation view which draws and shows the navigation drawer -->
+    <!-- include the menu created in the menu folder -->
+    <com.google.android.material.navigation.NavigationView
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        app:menu="@menu/nav_menu" />
+
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
