--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -49,8 +49,8 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        app:headerLayout="@layout/nav_header"
-        app:menu="@menu/nav_menu" />
+        app:headerLayout="@layout/nav_header_nav"
+        app:menu="@menu/nav" />
 
 </androidx.drawerlayout.widget.DrawerLayout>
 
