--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -3,69 +3,100 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@color/colorAccent"
     android:layout_height="match_parent">
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="413dp"
+        android:layout_height="331dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/cover1" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/login_button"
         android:layout_width="147dp"
         android:layout_height="55dp"
+        android:layout_marginBottom="40dp"
         android:background="@drawable/button_background"
-        android:textColor="@color/white"
         android:text="Start"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.53"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.911" />
+        app:layout_constraintHorizontal_bias="0.458"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
         android:id="@+id/TextEmailAddress"
-        android:layout_width="224dp"
-        android:layout_height="63dp"
-        android:layout_marginTop="384dp"
+        android:layout_width="286dp"
+        android:layout_height="52dp"
+        android:layout_marginTop="28dp"
         android:background="@drawable/borders"
         android:elevation="8dp"
         android:ems="10"
+        android:textColor="@color/black"
         android:hint="Email Address"
+        android:textColorHint="@color/black"
         android:inputType="textEmailAddress"
         android:paddingLeft="10dp"
         android:radius="16dp"
         android:shadowColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.545"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+
 
     <EditText
         android:id="@+id/TextPassword"
-        android:layout_width="226dp"
-        android:layout_height="60dp"
+        android:layout_width="280dp"
+        android:layout_height="54dp"
+        android:layout_marginTop="28dp"
         android:background="@drawable/borders"
         android:elevation="8dp"
         android:ems="10"
+        android:textColor="@color/black"
         android:hint="Password"
+        android:textColorHint="@color/black"
         android:inputType="textPassword"
         android:paddingLeft="10dp"
         android:radius="16dp"
         android:shadowColor="@color/black"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.551"
+        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.74" />
+        app:layout_constraintTop_toBottomOf="@+id/TextEmailAddress" />
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="600dp"
-        android:layout_height="336dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+    <TextView
+        android:id="@+id/forgotten_password_text"
+        android:layout_width="166dp"
+        android:layout_height="35dp"
+        android:clickable="true"
+        android:text="@string/forgot_password_text"
+        android:textColor="@color/white"
+        android:textSize="15sp"
+        app:layout_constraintBottom_toTopOf="@+id/sign_up_text"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.494"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.068"
-        app:srcCompat="@drawable/cover1" />
+        app:layout_constraintTop_toBottomOf="@+id/TextPassword"
+        app:layout_constraintVertical_bias="0.468" />
+
+    <TextView
+        android:id="@+id/sign_up_text"
+        android:layout_width="310dp"
+        android:layout_height="48dp"
+        android:layout_marginBottom="12dp"
+        android:clickable="true"
+        android:text="@string/sign_up_text"
+        android:textColor="@color/white"
+        android:textSize="17sp"
+        app:layout_constraintBottom_toTopOf="@+id/login_button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintStart_toStartOf="parent" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
