--- a/app/src/main/res/layout/pump_activity_list.xml
+++ b/app/src/main/res/layout/pump_activity_list.xml
@@ -14,7 +14,7 @@
         android:layout_height="100dp"
         android:layout_marginLeft="50dp"
         android:layout_marginTop="50dp"
-        android:hint="@string/welcome_text"
+        android:text="@string/welcome_text"
         android:padding="15dp"
         android:textColor="@color/colorPrimaryDark"
         android:textSize="25sp" />
@@ -25,7 +25,7 @@
         android:layout_height="60dp"
         android:layout_marginLeft="25dp"
         android:layout_marginTop="90dp"
-        android:hint="@string/welcome_text2"
+        android:text="@string/welcome_text2"
         android:padding="15dp"
         android:textColor="@color/colorPrimaryDark"
         android:textSize="25sp"
@@ -50,7 +50,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="351dp"
+        android:layout_height="362dp"
         android:layout_marginTop="250dp"
         android:layout_marginBottom="70dp"
         android:background="@color/colorAccent"
@@ -63,15 +63,5 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom" />
-
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/logout_button"
-        android:background="@drawable/button_background"
-        android:layout_width="124dp"
-        android:textColor="@color/white"
-        android:layout_height="wrap_content"
-        android:text="@string/logout_text"
-        app:layout_anchor="@+id/bottomAppBar"
-        app:layout_anchorGravity="center" />
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
